--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Pyschic Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-    <script type="text/javascript" src="assets\javascript/game.js"></script>  
+    <script type="text/javascript" src="assets/javascript/game.js"></script>  
     
 </head>
 <body>
